# HogTraining

./: CMakeLists.txt  README.md  script.sh
src/: train_HOG.cpp  visual_hog.cpp
